# textify

./: .travis.yml  README.md  pyproject.toml
tests/: test_textify.py
textify/: __init__.py  textify.py
