[tool.poetry]
name = "textify"
version = "0.0.1"
description = "A Simple Text Cleaning Package  For cleaning text during NLP"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/textify"
repository = "https://github.com/Jcharis/textify"
keywords = ["textify", "jcharistech", "clean text", "NLP","text preprocessing","text cleaning"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
